<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="adres"
            type="com.example.delawaretrackandtraceapp.screens.adres.AdresViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/titel_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adres"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/adresIngevuld"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewStraat"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_gravity="start"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Straatnaam :"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/textStraat"
                    android:layout_width="277dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewHuisNr"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_gravity="start"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Huisnummer :"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/textHuisNr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPostcode"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_gravity="start"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Postcode :"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/textPostcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewStad"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_gravity="start"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Woonplaats :"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/textStad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/adresIngevuld"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="11dp"
            android:layout_weight="1"
            android:text="volgende"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
