<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/startFragment"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/homeBottomNavigation"/>
    <item
        android:id="@+id/notificationsFragment"
        android:enabled="true"
        android:icon="@drawable/notifications"
        android:title="@string/notificatiesBottomNavigation"/>
    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/shopping_cart"
        android:title="@string/winkelwagenBottomNavigation"/>
</menu>