...
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text=" "
                android:textSize="23sp" />

            <Button
                android:id="@+id/bestelProducten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bestelproducten" />
        </LinearLayout>

...
